Install OWA button

--- a/en/index.html
+++ b/en/index.html
@@ -51,6 +51,7 @@
 		<li><a href="#" class="facebook"><span class="famfamfam_sprite facebook"></span>Facebook</a></li>
 		<li><a href="#" class="twitter"><span class="famfamfam_sprite twitter"></span>Twitter</a></li>
 		<li><a href="#" class="save"><span class="famfamfam_sprite disk"></span>Save</a></li>
+		<li><a href="#" class="mozapp">Install WebApp</a></li>
 	</ul>
 </div>
 <div id="help" class="left_tool">
