--- a/zh/index.html
+++ b/zh/index.html
@@ -51,6 +51,7 @@
 		<li><a href="#" class="facebook"><span class="famfamfam_sprite facebook"></span>Facebook</a></li>
 		<li><a href="#" class="twitter"><span class="famfamfam_sprite twitter"></span>Twitter</a></li>
 		<li><a href="#" class="plurk"><span class="famfamfam_sprite plurk"></span>噗浪分享</a></li>
+		<li><a href="#" class="mozapp">安裝</a></li>
 		<li><a href="#" class="save"><span class="famfamfam_sprite disk"></span>儲存圖片</a></li>
 	</ul>
 </div>
