Enable save to PNG, fixes #7

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
 
             <div class="btn-group">
-              <button data-action="save" class="btn disabled btn-primary hide-label" title="Save to disk"><i class="icon-hdd"></i><span>Save</span></button>
+              <a data-canvas-ctl download="wordcloud.png" href="#" data-action="save" class="btn disabled btn-primary hide-label" title="Save to disk"><i class="icon-hdd"></i><span>Save</span></a>
             </div>
 
           </div>
