RSS Feed Fetcher

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
           <form id="wc-panel-example" hidden>
             <label class="radio">
-              <input disabled type="radio" name="example"
+              <input type="radio" name="example"
                 value="feed:http://www.nytimes.com/services/xml/rss/nyt/GlobalHome.xml" checked>
               New York Times News Feed (Global Edition)
             </label>
             <label class="radio">
-              <input disabled type="radio" name="example"
+              <input type="radio" name="example"
                 value="feed:http://www.nytimes.com/services/xml/rss/nyt/HomePage.xml">
               New York Times News Feed (U.S.)
             </label>
