First Screen CSS

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset=UTF-8>
   <title>HTML5 Word Cloud</title>
+  <link rel="stylesheet" type="text/css" href="./assets/first-screen.css">
   <!-- Le styles -->
   <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap.min.css" rel="stylesheet">
   <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
