Cancel button on the list dialog

--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
         <span class="help-block">For advance usage, <a href="http://timdream.org/wordcloud2.js/">wordcloud2.js</a> page provide finer control over resulting canvas. You could copy the list here.</span>
     </div>
     <div class="modal-footer">
-      <button id="wc-list-done-btn" class="btn btn-primary">Done</button>
+      <button id="wc-list-cancel-btn" class="btn">Cancel</button>
+      <button id="wc-list-confirm-btn" class="btn btn-primary">Confirm</button>
     </div>
   </div>
 
