Put an independent Facebook Login button on Sharer

--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
             <div class="bar" id="wc-sharer-progress"></div>
           </div>
           <p id="wc-sharer-status">...</p>
+          <button id="wc-sharer-facebook-login-btn" class="btn" hidden>Facebook Login</button>
         </div>
       </div>
     </div>
