+ Share to Tumblr

--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
 
             <div class="btn-group">
               <button data-canvas-ctl data-action="facebook" class="btn disabled" title="Share on Facebook"><i class="favicons-facebook"></i></button>
+              <button data-canvas-ctl data-action="tumblr" class="btn disabled" title="Share on Tumblr"><i class="favicons-tumblr"></i></button>
               <button data-canvas-ctl data-action="plurk" class="btn disabled" title="Share on Plurk"><i class="favicons-plurk"></i></button>
               <button data-canvas-ctl data-action="twitter" class="btn disabled" title="Share on Twitter"><i class="favicons-twitter"></i></button>
             </div>
