Shape button on dashboard and some theme adjustment

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
           <div class="btn-group">
             <button data-canvas-ctl data-action="refresh" class="btn disabled hide-label" title="Refresh"><i class="icon-refresh"></i><span>Refresh</span></button>
             <button data-canvas-ctl data-action="theme" class="btn disabled" title="Switch Theme"><i class="icon-gift"></i><span>Theme</span></button>
+            <button data-canvas-ctl data-action="shape" class="btn disabled" title="Switch Shape"><i class="icon-star"></i><span>Shape</span></button>
             <button data-canvas-ctl data-action="edit" class="btn disabled" title="Back"><i class="icon-edit"></i><span>Edit List</span></button>
           </div>
 
