Switch to tabs-left style and some layout tweaks

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     </div>
     <div class="modal-body">
       <div class="row-fluid">
-        <div class="span3">
-          <ul id="wc-source-menu" class="nav nav-tabs nav-stacked">
+        <div class="span3 tabbable tabs-left">
+          <ul id="wc-source-menu" class="nav nav-tabs">
             <li hidden>
               <a href="#" data-panel="example">Examples</a>
             </li>
