About dialog content (w/ privacy policy)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <canvas id="wc-canvas"></canvas>
 
   <div id="wc-loading">
-    <div class="wc-icon">
+    <div class="wc-icon" lang="en">
       <span class="wc-icon-cloud"></span>
     </div>
     <div id="wc-loading-label" class="lead"></div>
@@ -295,10 +295,15 @@
 
   <div id="wc-about-dialog" class="modal" hidden>
     <div class="modal-header">
-      <h3 id="wc-sharer-title">About HTML5 Word Cloud</h3>
+      <h3 id="wc-about-title">About</h3>
     </div>
     <div class="modal-body">
-      <span>TODO: Insert trimed content of README.md</span>
+      <div id="wc-about-icon" class="well">
+        <div class="wc-icon" lang="en">
+          <span class="wc-icon-cloud"></span>
+        </div>
+      </div>
+      <div id="wc-about-content">...</div>
     </div>
     <div class="modal-footer">
       <button id="wc-about-close-btn" class="btn btn-primary">Close</button>
