l10n feature added (init)
Conflicts:
	index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html>
 <head>
   <meta charset=UTF-8>
   <title>HTML5 Word Cloud</title>
@@ -268,7 +268,7 @@
 
   <div id="wc-sharer-dialog" class="modal" hidden>
     <div class="modal-header">
-      <h3 id="wc-sharer-title">...</h3>
+      <h3 data-l10n-id="share-dialog-title" id="wc-sharer-title">...</h3>
     </div>
     <div class="modal-body">
       <div class="row-fluid">
@@ -295,7 +295,7 @@
 
   <div id="wc-about-dialog" class="modal" hidden>
     <div class="modal-header">
-      <h3 id="wc-about-title">About</h3>
+      <h3 data-l10n-id="about-dialog-title" id="wc-about-title"></h3>
     </div>
     <div class="modal-body">
       <div id="wc-about-icon" class="well">
@@ -313,7 +313,7 @@
   <div id="wc-browser-support" hidden>
     <div class="container">
       <div class="alert alert-block alert-error">
-        <h4>Your browser is not supported!</h4>
+        <h4 data-l10n-id="browser-support-title"></h4>
         To use HTML5 Word Cloud, please use the lastest version of Firefox, Chrome, Safari, or Internet Explorer.
       </div>
     </div>
