Use WordFreqSync in browsers without Web Workers

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     src="./assets/web-l10n/l10n.js"></script>
   <script defer type="text/javascript"
     src="./assets/wordfreq/src/wordfreq.js"></script>
+  <!-- For browser without Web Workers support, run the calculation
+       on the main event loop with the worker script -->
+  <script defer type="text/javascript"
+    src="./assets/wordfreq/src/wordfreq.worker.js"></script>
   <script defer type="text/javascript"
     src="./assets/wordcloud2.js/src/wordcloud2.js"></script>
   <script defer type="text/javascript"
