--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <a class="btn file-wrapper">
               <span data-l10n-id="panel-file-browse"></span>
               <input type="file" accept="text/plain" id="wc-panel-file-file">
-            </a><span id="wc-panel-file-file-label"></span>
+            </a><span data-l10n-id="n-file-selected" data-l10n-args='{ "n": 0 }' id="wc-panel-file-file-label"></span>
             <span data-l10n-id="panel-file-help" class="help-block"></span>
             <label data-l10n-id="panel-file-encoding" for="wc-panel-file-encoding"></label>
             <input type="text" id="wc-panel-file-encoding" value="UTF-8">
@@ -268,7 +268,7 @@
 
   <div id="wc-sharer-dialog" class="modal" hidden>
     <div class="modal-header">
-      <h3 data-l10n-id="share-dialog-title" id="wc-sharer-title">...</h3>
+      <h3 id="wc-sharer-title">...</h3>
     </div>
     <div class="modal-body">
       <div class="row-fluid">
