mock the webL10n library in tests

--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,9 @@
     QUnit.config.testTimeout = 10*1E3;
   </script>
 
+  <!-- util -->
+  <script src="util.js"></script>
+
   <!-- dependencies -->
   <script src="../assets/wordfreq/src/wordfreq.js"></script>
   <script src="../assets/wordfreq/src/wordfreq.worker.js"></script>
