https for Google URLs

--- a/about.en-US.html
+++ b/about.en-US.html
@@ -28,7 +28,7 @@ Everything is processed on your computer directly, employed technologies in the 
 Additionally, the identifier of the source selected to generated the image will be collected.</p>
 
 <p>These information will not be shared with people other than the author and contributors.
-Read <a href="http://www.google.com/analytics/learn/privacy.html">Google Analytics security and privacy principles</a> on how Google utilize these data.</p>
+Read <a href="https://www.google.com/analytics/learn/privacy.html">Google Analytics security and privacy principles</a> on how Google utilize these data.</p>
 
 <h3>External Services</h3>
 
@@ -38,7 +38,7 @@ You should check and read the privacy policy of these external providers.</p>
 
 <ul>
 <li><a href="https://www.facebook.com/about/privacy">Facebook Data Use Policy</a></li>
-<li><a href="http://www.google.com/policies/privacy/">Google Privacy Policy</a></li>
+<li><a href="https://www.google.com/policies/privacy/">Google Privacy Policy</a></li>
 <li><a href="http://imgur.com/privacy">Privacy Policy - Imgur</a></li>
 <li><a href="http://www.plurk.com/privacy">Plurk Privacy Policy</a></li>
 <li><a href="http://www.tumblr.com/policy/en/privacy">Tumblr Privacy Policy</a></li>
