--- a/about.zh-TW.html
+++ b/about.zh-TW.html
@@ -28,7 +28,7 @@
 另外，會收集製作圖片的資料來源資訊。</p>
 
 <p>這些資訊不會透漏給本站作者與貢獻者以外的第三方。
-閱讀 <a href="http://www.google.com/analytics/learn/privacy.html">Google Analytics 安全性與隱私權原則</a>以了解 Google 如何使用此類資訊。</p>
+閱讀 <a href="https://www.google.com/analytics/learn/privacy.html">Google Analytics 安全性與隱私權原則</a>以了解 Google 如何使用此類資訊。</p>
 
 <h3>第三方網路服務</h3>
 
@@ -38,7 +38,7 @@
 
 <ul>
 <li><a href="https://www.facebook.com/about/privacy">Facebook Data Use Policy</a></li>
-<li><a href="http://www.google.com/policies/privacy/">Google Privacy Policy</a></li>
+<li><a href="https://www.google.com/policies/privacy/">Google Privacy Policy</a></li>
 <li><a href="http://imgur.com/privacy">Privacy Policy - Imgur</a></li>
 <li><a href="http://www.plurk.com/privacy">Plurk Privacy Policy</a></li>
 <li><a href="http://www.tumblr.com/policy/en/privacy">Tumblr Privacy Policy</a></li>
