--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta charset=UTF-8>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
   <title>HTML5 Word Cloud</title>
   <link rel="stylesheet" type="text/css" href="./assets/first-screen.css">
   <!-- Le styles -->
