--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-l10n-id="html">
 <head>
   <meta charset=UTF-8>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
