--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     <div class="container">
       <div class="alert alert-block alert-error">
         <h4 data-l10n-id="browser-support-title"></h4>
-        <span data-l10n-id="browser-support-message">To use HTML5 Word Cloud, please use the lastest version of Firefox, Chrome, Safari, or Internet Explorer.</span>
+        <span data-l10n-id="browser-support-message"></span>
       </div>
     </div>
   </div>
