--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           </form>
 
           <form id="wc-panel-facebook" hidden>
-            <p id="wc-panel-facebook-status">...</p>
+            <p id="wc-panel-facebook-status" data-l10n-id="loading"></p>
           </form>
 
           <form id="wc-panel-googleplus" hidden>
@@ -201,7 +201,7 @@
               <input type="text" id="wc-panel-googleplus-id" class="input-medium" placeholder="me" />
             </div>
             <span data-l10n-id="panel-googleplus-help" class="help-block"></span>
-            <p id="wc-panel-googleplus-status">...</p>
+            <p id="wc-panel-googleplus-status" data-l10n-id="loading"></p>
           </form>
 
         </div>
@@ -280,7 +280,7 @@
 
   <div id="wc-sharer-dialog" class="modal" hidden>
     <div class="modal-header">
-      <h3 id="wc-sharer-title">...</h3>
+      <h3 id="wc-sharer-title"></h3>
     </div>
     <div class="modal-body">
       <div class="row-fluid">
@@ -293,7 +293,7 @@
           <div class="progress progress-striped active">
             <div class="bar" id="wc-sharer-progress"></div>
           </div>
-          <p id="wc-sharer-status">...</p>
+          <p id="wc-sharer-status" data-l10n-id="loading"></p>
           <button data-l10n-id="share-dialog-facebook-login-btn" id="wc-sharer-facebook-login-btn" class="btn" hidden></button>
         </div>
       </div>
