A selection dropdown for small screens

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <div class="modal-header clearfix">
       <h3 data-l10n-id="source-dialog-title" id="wc-source-title" class="pull-left"></h3>
       <div class="pull-right">
+        <select id="wc-source-selection" class="input-medium"></select>
         <button data-l10n-id="source-dialog-about-btn" id="wc-source-about-btn" class="btn btn-info"></button>
       </div>
     </div>
