Add to home screen

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
   <title>HTML5 Word Cloud</title>
 
+  <meta name="apple-mobile-web-app-title" content="Word Cloud">
+  <link rel="apple-touch-icon-precomposed" href="./assets/images/wordcloud-logo.png" />
+
   <meta name="description" content="Get the most frequent terms of posts of feeds in an tag cloud representation, powered by HTML5.">
   <meta property="og:description" content="Get the most frequent terms of posts of feeds in an tag cloud representation, powered by HTML5." />
 
