--- a/index.html
+++ b/index.html
@@ -160,6 +160,11 @@
                 value="feed:http://feeds.feedburner.com/Pansci">
               <span data-l10n-id="panel-example-pansci"></span>
             </label>
+            <label class="radio only-zh-TW">
+              <input type="radio" name="example"
+                value="feed:http://rss.ptt.cc/Boy-Girl.xml">
+              <span data-l10n-id="panel-example-ptt-bg"></span>
+            </label>
           </form>
 
           <form id="wc-panel-wikipedia" hidden>
