Replace the iframe instead of update the src to not generate a new history state

--- a/index.html
+++ b/index.html
@@ -374,11 +374,11 @@
   </div>
 
   <div id="wc-sns-push" hidden>
-    <div class="button">
-      <iframe id="wc-sns-facebook-iframe" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    <div class="button" id="wc-sns-facebook">
+      <iframe id="-iframe" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
     </div>
-    <div class="button">
-      <iframe id="wc-google-plus-iframe" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    <div class="button" id="wc-sns-google-plus">
+      <iframe id="-iframe" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
     </div>
   </div>
 
