--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html data-l10n-id="html">
 <head>
   <meta charset=UTF-8>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <title>HTML5 Word Cloud</title>
