+ distant contact information

--- a/about.en-US.html
+++ b/about.en-US.html
@@ -15,7 +15,8 @@ Released under <a href="./MIT-LICENSE.txt">the MIT license</a>.</p>
 <p><a href="https://github.com/timdream/wordcloud">Source code</a> available on Github.
 Contribution welcome.</p>
 
-<p>Read the <a href="https://github.com/timdream/wordcloud/blob/master/README.md">README</a> to know more about the technologies and services employed.</p>
+<p>Read the <a href="https://github.com/timdream/wordcloud/blob/master/README.md">README</a> to know more about the technologies and services employed.
+Contact the author or leave <a href="https://github.com/timdream/wordcloud/issues">an issue on Github</a> for questions and inquiries.</p>
 
 <h2>Privacy Policy</h2>
 
