--- a/about.zh-TW.html
+++ b/about.zh-TW.html
@@ -15,7 +15,8 @@
 <p><a href="https://github.com/timdream/wordcloud">程式碼</a>可於 Github 取得。
 歡迎貢獻。</p>
 
-<p>閱讀 <a href="https://github.com/timdream/wordcloud/blob/master/README.md">README</a> 了解使用的技術與網路服務。</p>
+<p>閱讀 <a href="https://github.com/timdream/wordcloud/blob/master/README.md">README</a> 了解使用的技術與網路服務。
+問題與其他事項請聯絡作者或是在 <a href="https://github.com/timdream/wordcloud/issues">Github 留言</a>。</p>
 
 <h2>隱私權保護政策</h2>
 
